[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nythera"
dynamic = ["version"]
description = "HTML to PDF CLI tool using WeasyPrint"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Sumit" }
]

license = { text = "MIT" }

keywords = ["html", "pdf", "weasyprint", "cli"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "weasyprint",
    "rich"
]

[project.scripts]
nythera = "nythera.cli:main"

[tool.setuptools.dynamic]
version = { attr = "nythera.__version__" }

[tool.setuptools.packages.find]
where = ["."]